cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_296.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/cms.c:589: error: DEAD_STORE
  The value written to &argc (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/cms.c:589:5: Write of unused value
587.           }
588.       }
589.       argc = opt_num_rest();
           ^
590.       argv = opt_rest();
591.   
